force-app/main/default/objects/LeadEvent__e/LeadEvent__e.object-meta.xml
<CustomObject>
    <description>Main event for capturing data within the system</description>
    <label>LeadEvent</label>
    <pluralLabel>LeadEvents</pluralLabel>
</CustomObject>