force-app/main/default/objects/LeadEvent__e/fields/Current_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Agent_ID__c</fullName>
    <label>Current Agent ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>