force-app/main/default/objects/LeadEvent__e/fields/Current_App_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_App_ID__c</fullName>
    <description>Application ID of the current calculated destination system</description>
    <label>Current App ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>