force-app/main/default/objects/LeadEvent__e/fields/Current_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Id__c</fullName>
    <label>Current Owner Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>