force-app/main/default/objects/LeadEvent__e/fields/Message_Payload__c.field-meta.xml
<CustomField>
    <fullName>Message_Payload__c</fullName>
    <label>Message Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>