force-app/main/default/objects/LeadEvent__e/fields/Previous_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Agent_ID__c</fullName>
    <label>Previous Agent ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>