force-app/main/default/objects/LeadEvent__e/fields/Previous_App_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_App_ID__c</fullName>
    <description>Application ID of the previous calculated destination system</description>
    <label>Previous App ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>