force-app/main/default/objects/LeadEvent__e/fields/SLA_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_In_Hours__c</fullName>
    <defaultValue>48</defaultValue>
    <label>SLA In Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>