force-app/main/default/objects/LeadEvent__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;New&apos;</defaultValue>
    <label>Status</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>