force-app/main/default/objects/LeadEvent__e/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub-Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>