force-app/main/default/objects/LeadEvent__e/fields/System_Trail__c.field-meta.xml
<CustomField>
    <fullName>System_Trail__c</fullName>
    <description>trail of systems visited</description>
    <label>System Trail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>